# clippers

./: .gitignore  LICENSE  README.md  pyproject.toml
clippers.egg-info/: PKG-INFO  SOURCES.txt
src/clippers/: __init__.py  utils.py
src/clippers.egg-info/: PKG-INFO  SOURCES.txt
