[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clippers"
version = "0.1.2"
description = "A package to do text, Markdown and HTML conversions and replacements"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Nate Dhaliwal" },
]
keywords = ["python", "packaging", "example"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NateDhaliwal/clippers"
Repository = "https://github.com/NateDhaliwal/clippers"
"Bug Tracker" = "https://github.com/NateDhaliwal/clippers/issues"

[tool.setuptools.packages.find]
where = ["src"]
